k8s/app/deployments/kong-database.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kong-database
  labels:
    app: kong-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kong-database
  template:
    metadata:
      labels:
        app: kong-database
    spec:
      containers:
        - name: postgres
          image: postgres:9.6  # Recommended PostgreSQL version for Kong
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: kong-database
  labels:
    app: kong-database
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: kong-database
  type: ClusterIP
