k8s/app/deployments/kong-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kong
  template:
    metadata:
      labels:
        app: kong
    spec:
      containers:
        - name: kong
          image: kong/kong-gateway:latest  # Official Kong Image
          ports:
            - containerPort: 8000  # Proxy
            - containerPort: 8443  # Secure Proxy
            - containerPort: 8001  # Admin API
            - containerPort: 8444  # Secure Admin API
---
apiVersion: v1
kind: Service
metadata:
  name: kong
spec:
  selector:
    app: kong
  ports:
    - name: proxy
      protocol: TCP
      port: 80
      targetPort: 8000
    - name: proxy-secure
      protocol: TCP
      port: 443
      targetPort: 8443
    - name: admin
      protocol: TCP
      port: 8001
      targetPort: 8001
    - name: admin-secure
      protocol: TCP
      port: 8444
      targetPort: 8444
  type: LoadBalancer
