k8s/app/deployments/konga-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kong
  template:
    metadata:
      labels:
        app: kong
    spec:
      containers:
        - name: kong
          image: kong/kong-gateway:latest
          ports:
            - containerPort: 8000
            - containerPort: 8443
            - containerPort: 8001
            - containerPort: 8444

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kong-migrations
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kong-migrations
  template:
    metadata:
      labels:
        app: kong-migrations
    spec:
      containers:
      - name: kong-migration
        image: kong
        command: ["kong", "migrations", "bootstrap"]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kong
  labels:
    app: kong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kong
  template:
    metadata:
      labels:
        app: kong
    spec:
      containers:
      - name: kong
        image: kong
        ports:
        - containerPort: 8000  # Proxy
        - containerPort: 8443 # Secure Proxy
        - containerPort: 8001 # Admin API
        - containerPort: 8444 # Secure Admin API
---
apiVersion: v1
kind: Service
metadata:
  name: kong-proxy
spec:
  selector:
    app: kong
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  - protocol: TCP
    port: 443
    targetPort: 8443
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: konga
  labels:
    app: konga
spec:
  replicas: 1
  selector:
    matchLabels:
      app: konga
  template:
    metadata:
      labels:
        app: konga
    spec:
      containers:
      - name: konga
        image: pantsel/konga
        ports:
        - containerPort: 1337
---
apiVersion: v1
kind: Service
metadata:
  name: konga
spec:
  selector:
    app: konga
  ports:
  - protocol: TCP
    port: 1337
    targetPort: 1337
  type: LoadBalancer
