k8s/app/deployments/mongo-events-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-events
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-events
  template:
    metadata:
      labels:
        app: mongo-events
    spec:
      containers:
        - name: mongo-events
          image: cmerbruno/custom-mongo:v01
          ports:
            - containerPort: 2033
          volumeMounts:
            - name: mongo-data-events
              mountPath: /data/db
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
      volumes:
        - name: mongo-data-events
          persistentVolumeClaim:
            claimName: mongo-data-events-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-events
spec:
  selector:
    app: mongo-events
  ports:
    - protocol: TCP
      port: 2033
      targetPort: 2033
  type: ClusterIP
