k8s/app/deployments/mongo-express-auth-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express-auth
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mongo-express-auth
  template:
    metadata:
      labels:
        app: mongo-express-auth
    spec:
      containers:
        - name: mongo-express-auth
          image: cmerbruno/custom-mongo-express:v01
          ports:
            - containerPort: 8081
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-auth
spec:
  selector:
    app: mongo-express-auth
  type: NodePort 
  ports:
    - protocol: TCP
      port: 2032         
      targetPort: 8081  
      nodePort: 31032
