k8s/app/deployments/mongo-express-inventory-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express-inventory
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mongo-express-inventory
  template:
    metadata:
      labels:
        app: mongo-express-inventory
    spec:
      containers:
        - name: mongo-express-inventory
          image: cmerbruno/custom-mongo-express:v01
          ports:
            - containerPort: 2038
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-inventory
spec:
  selector:
    app: mongo-express-inventory
  type: NodePort 
  ports:
    - protocol: TCP
      port: 2038         
      targetPort: 2038  
      nodePort: 31038
