k8s/app/deployments/mongo-express-requisition-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express-requisition
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mongo-express-requisition
  template:
    metadata:
      labels:
        app: mongo-express-requisition
    spec:
      containers:
        - name: mongo-express-requisition
          image: cmerbruno/custom-mongo-express:v02
          ports:
            - containerPort: 2036
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-requisition
spec:
  selector:
    app: mongo-express-requisition
  type: NodePort 
  ports:
    - protocol: TCP
      port: 2036         
      targetPort: 8081  
      nodePort: 31036
