k8s/app/deployments/scheduler-events-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scheduler-events
spec:
  replicas: 3
  selector:
    matchLabels:
      app: scheduler-events
  template:
    metadata:
      labels:
        app: scheduler-events
    spec:
      containers:
        - name: app
          image: lmtp/scheduler-events:latest
          ports:
            - containerPort: 3022
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: scheduler-events-service
spec:
  selector:
    app: scheduler-events
  ports:
    - protocol: TCP
      port: 3022
      targetPort: 3022
  type: LoadBalancer
