k8s/app/deployments/scheduler-requisition-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scheduller-requisitions
spec:
  replicas: 5
  selector:
    matchLabels:
      app: scheduller-requisitions
  template:
    metadata:
      labels:
        app: scheduller-requisitions
    spec:
      containers:
        - name: app
          image: lmtp/scheduler-requisicoes:latest
          ports:
            - containerPort: 2003
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: scheduller-requisitions-service
spec:
  selector:
    app: scheduller-requisitions
  ports:
    - protocol: TCP
      port: 2003
      targetPort: 2003
  type: LoadBalancer
