k8s/app/deployments/kong.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scheduler-ingress
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
    - host: localhost
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: scheduler-auth-service
                port:
                  number: 3021
          - path: /events
            pathType: Prefix
            backend:
              service:
                name: scheduler-events-service
                port:
                  number: 3022
          - path: /inventory
            pathType: Prefix
            backend:
              service:
                name: scheduler-inventory-service
                port:
                  number: 3024
          - path: /requisition
            pathType: Prefix
            backend:
              service:
                name: scheduler-requisition-service
                port:
                  number: 3023
